--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -11,4 +11,6 @@
   --background-gray: #eff1ef;
   --gray-button: #5f7161;
   --text-gray: rgba(0, 0, 0, 0.5);
+  --text-green: #73d13d;
+  --border-gray:#E0E0E0;
 }
