--- a/src/components/HostelHeader/style.scss
+++ b/src/components/HostelHeader/style.scss
@@ -12,12 +12,37 @@
     height: 288px;
     background-color: #252525;
     overflow: hidden;
+    // background-image: attr(data-url);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    .status {
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+      background: rgba(0, 0, 0, 0.8);
+      display: flex;
+      padding: 6px;
+      border-radius: 6px;
+      .icon {
+        width: 12px;
+        height: 12px;
+        margin-right: 6px;
+      }
+      p {
+        font-size: var(--f10);
+        color: var(--white);
+        font-weight: 600;
+        margin: 0;
+      }
+    }
   }
   .hostel-details {
     display: flex;
     justify-content: space-between;
     background: var(--background-gray);
     padding: 16px;
+    border-bottom: 1px solid var(--border-gray);
     .name-address {
       display: flex;
       flex-direction: column;
@@ -25,20 +50,27 @@
         font-size: var(--f12);
         color: --var(--black);
         font-weight: 700;
+        margin: 0;
+        margin-bottom: 5px;
       }
       p {
         font-size: var(--f10);
+        margin: 0;
+        margin-bottom: 5px;
         color: var(--text-gray);
       }
     }
     .desc {
       display: flex;
       flex-direction: column;
-      font-size: --f10;
+      font-size: var(--f10);
       font-weight: 600;
+      text-align: right;
       p {
-        letter-spacing: 0.2em;
+        letter-spacing: 0.02em;
         margin: 0;
+        margin-bottom: 5px;
+        font-size: inherit;
       }
     }
   }
@@ -46,15 +78,46 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    border-bottom: 1px solid var(--border-gray);
+    height: 48px;
+    box-sizing: border-box;
+    padding: 9px;
     .label {
       font-size: var(--f10);
       font-weight: 600;
       color: var(--text-gray);
+      text-transform: capitalize;
     }
     .value {
       font-size: var(--f10);
       font-weight: 600;
       color: var(--black);
+      margin: 0;
+    }
+    .block {
+      display: flex;
+      position: relative;
+      text-align: left;
+      width: 33%;
+      justify-content: center;
+      align-items: center;
+
+      &:nth-child(even) {
+        &::before,
+        &::after {
+          content: "";
+          width: 1px;
+          height: 100%;
+          background-color: var(--border-gray);
+          position: absolute;
+        }
+        &::before {
+          left: 0;
+        }
+        &::after {
+          right: 0;
+        }
+      }
     }
   }
 }
