--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -142,3 +142,41 @@ body {
   overflow-y: auto;
   position: relative;
 }
+.block {
+  display: flex;
+  position: relative;
+  text-align: left;
+  width: 33%;
+  justify-content: center;
+  align-items: center;
+
+  &:nth-child(even) {
+    &::before,
+    &::after {
+      content: "";
+      width: 1px;
+      height: 100%;
+      background-color: var(--border-gray);
+      position: absolute;
+    }
+    &::before {
+      left: 0;
+    }
+    &::after {
+      right: 0;
+    }
+  }
+}
+//icons styles
+.icon-20 {
+  width: 20px;
+  height: 20px;
+}
+.icon-24 {
+  width: 24px;
+  height: 24px;
+}
+.icon-26 {
+  width: 26px;
+  height: 26px;
+}
