--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -8,6 +8,7 @@
   --white: #fff;
   --primary-blue: #1597e5;
   --secondary-blue: #193498;
+  --ternary-blue:#3D56B2;
   --background-gray: #eff1ef;
   --gray-button: #5f7161;
   --text-gray: rgba(0, 0, 0, 0.5);
