--- a/src/components/RoomLists/style.scss
+++ b/src/components/RoomLists/style.scss
@@ -2,33 +2,56 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  box-sizing: border-box;
   padding: 16px;
   height: auto;
   .room-card {
     width: 100%;
-    height: 96px;
+    min-height: 100px;
     overflow: hidden;
     border-radius: 8px;
+    margin-bottom: 15px;
     .header {
       width: 100%;
       height: 24px;
       text-align: left;
+      color: var(--white);
+      padding: 5px 12px;
+      display: flex;
+      // color: var(--ternary-blue);
       h2 {
-        margin: 0;
+        margin: auto auto auto 0;
         font-size: var(--f10);
+        color: var(--white);
       }
     }
     .body {
+      box-sizing: border-box;
       display: flex;
       flex-direction: row;
       width: 100%;
       border-bottom: 1px solid var(--border-gray);
+      border-right: 1px solid var(--border-gray);
+      border-left: 1px solid var(--border-gray);
+      padding: 12px;
+      font-size: var(--f10);
     }
     .footer {
-      ul{
+      border-radius: 0 0px 8px 8px;
+      border-bottom: 1px solid var(--border-gray);
+      border-right: 1px solid var(--border-gray);
+      border-left: 1px solid var(--border-gray);
+
+      ul {
         display: flex;
         flex-direction: row;
-        padding: 0;
+        padding: 8px 20px;
+        margin: 0 !important;
+        li {
+          color: var(--text-gray);
+          margin-right: 15px;
+          font-size: var(--f10);
+        }
       }
     }
   }
