--- a/src/components/HostelHeader/style.scss
+++ b/src/components/HostelHeader/style.scss
@@ -92,6 +92,7 @@
     height: 48px;
     box-sizing: border-box;
     padding: 9px;
+    background: var(--white);
     .label {
       font-size: var(--f10);
       font-weight: 600;
