--- a/src/components/RoomLists/style.scss
+++ b/src/components/RoomLists/style.scss
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   padding: 16px;
   height: auto;
+  background: var(--white);
   .room-card {
     width: 100%;
     min-height: 100px;
