--- a/src/components/GreetingsHeader/style.scss
+++ b/src/components/GreetingsHeader/style.scss
@@ -11,6 +11,7 @@
         color: var(--black);
     }
     .help-btn {
+        border: none;
         border-radius: 35px;
         width: auto;
         padding: 6px;
