--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,6 +3,8 @@ body {
   font-family: "Manrope", sans-serif;
   margin: 0;
   padding: 0;
+  width: 100vw;
+  height: auto;
 }
 
 .d-flex {
@@ -13,6 +15,9 @@ body {
 }
 .flex-row {
   flex-direction: row !important;
+}
+.justify-space-between{
+  justify-content: space-between;
 }
 //padding margin
 .p-0 {
@@ -160,10 +165,37 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
   position: relative;
+  background: var(--background-gray);
   h2 {
     font-size: var(--f12);
     font-weight: 700;
     color: var(--black);
+  }
+}
+.list-container {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+.first-button-container {
+  height: 60px;
+  // width: 100%;
+  margin: 15px;
+  display: flex;
+  box-sizing: border-box;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid var(--border-gray);
+  h2{
+    font-size: var(--f13);
+    color: var(--black);
+    margin-bottom: 0;
+  }
+  label {
+    font-size: var(--f10);
+    color: var(--text-gray);
   }
 }
 .block {
@@ -191,7 +223,23 @@ body {
     }
   }
 }
+
+//button style
+
+.white-btn{
+  padding: 10px 16px;
+  background-color: var(--white);
+  font-weight: 500;
+  color:  var(--gray-button);
+  text-align: center;
+  border-radius: 8px;
+  border: none;
+}
 //icons styles
+.icon-10 {
+  width: 10px;
+  height: 10px;
+}
 .icon-20 {
   width: 20px;
   height: 20px;
