--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -16,7 +16,7 @@ body {
 .flex-row {
   flex-direction: row !important;
 }
-.justify-space-between{
+.justify-space-between {
   justify-content: space-between;
 }
 //padding margin
@@ -116,6 +116,9 @@ body {
   margin-left: 3rem;
 }
 
+.mr-auto {
+  margin-right: auto !important;
+}
 .mr-0 {
   margin-right: 0 !important;
 }
@@ -188,7 +191,7 @@ body {
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid var(--border-gray);
-  h2{
+  h2 {
     font-size: var(--f13);
     color: var(--black);
     margin-bottom: 0;
@@ -223,14 +226,46 @@ body {
     }
   }
 }
-
+.menu-tab {
+  display: flex;
+  flex-direction: row;
+  background: var(--white);
+  position: relative;
+  box-sizing: border-box;
+  padding: 0 20px;
+  border-bottom: 1px solid var(--border-gray);
+  border-top: 1px solid var(--border-gray);
+  .tab-item {
+    font-size: var(--f12);
+    font-weight: 700;
+    color: var(--black);
+    position: relative;
+    text-transform: capitalize;
+    padding: 15px 0;
+    margin: 0 20px;
+    &.active {
+      font-size: var(--f12);
+      color: var(--gray-button);
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 3px;
+        background-color: var(--gray-button);
+        border-radius: 8px 8px 0px 0px;
+        left: 0;
+      }
+    }
+  }
+}
 //button style
 
-.white-btn{
+.white-btn {
   padding: 10px 16px;
   background-color: var(--white);
   font-weight: 500;
-  color:  var(--gray-button);
+  color: var(--gray-button);
   text-align: center;
   border-radius: 8px;
   border: none;
