--- a/src/components/GreetingsHeader/style.scss
+++ b/src/components/GreetingsHeader/style.scss
@@ -14,9 +14,12 @@
         border: none;
         border-radius: 35px;
         width: auto;
-        padding: 6px;
+        padding: 6px 16px;
         text-transform: uppercase;
         font-size: var(--f10);
         background: var(--white);
+        .icon {
+            margin-right: 8px;
+        }
     }
 }
