--- a/src/components/RoomList/style.scss
+++ b/src/components/RoomList/style.scss
@@ -67,18 +67,20 @@
     }
   }
   .room-item-list {
-    margin: -15px;
+    margin: -16px 0 0 -16px;
     display: inline-flex;
     flex-wrap: wrap;
-    // width: calc(100% +-15px);
+    // width: calc(100% + -16px);
     .room-item {
       display: flex;
       flex-direction: column;
-      margin: 15px;
+      margin: 16px 0 0 16px;
       label {
         font-size: var(--f10);
         color: var(--text-gray);
         text-align: center;
+        margin-bottom: 4px;
+        text-transform: capitalize;
       }
       span {
         width: 50px;
@@ -90,7 +92,14 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        .icon {
+        .available {
+          stroke: var(--available);
+        }
+        .partial {
+          stroke: var(--partial-available);
+        }
+        .full {
+          stroke: var(--full);
         }
       }
     }
