--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -13,6 +13,9 @@ body {
 .flex-column {
   flex-direction: column !important;
 }
+.flex-wrap {
+  flex-wrap: wrap  !important;
+}
 .flex-row {
   flex-direction: row !important;
 }
@@ -24,57 +27,76 @@ body {
   padding: 0 !important;
 }
 .p-1 {
-  padding: 0.25rem;
+  padding: 0.25rem !important;
 }
 .p-2 {
-  padding: 0.5rem;
+  padding: 0.5rem !important;
 }
 .p-3 {
-  padding: 1rem;
+  padding: 1rem !important;
 }
 .p-4 {
-  padding: 1.5rem;
+  padding: 1.5rem !important;
 }
 .p-5 {
-  padding: 3rem;
+  padding: 3rem !important;
 }
 
 .pr-0 {
   padding-right: 0 !important;
 }
 .pr-1 {
-  padding-right: 0.25rem;
+  padding-right: 0.25rem !important;
 }
 .pr-2 {
-  padding-right: 0.5rem;
+  padding-right: 0.5rem !important;
 }
 .pr-3 {
-  padding-right: 1rem;
+  padding-right: 1rem !important;
 }
 .pr-4 {
-  padding-right: 1.5rem;
+  padding-right: 1.5rem !important;
 }
 .pr-5 {
-  padding-right: 3rem;
+  padding-right: 3rem !important;
 }
 
 .pt-0 {
   padding-top: 0 !important;
 }
 .pt-1 {
-  padding-top: 0.25rem;
+  padding-top: 0.25rem !important;
 }
 .pt-2 {
-  padding-top: 0.5rem;
+  padding-top: 0.5rem !important;
 }
 .pt-3 {
-  padding-top: 1rem;
+  padding-top: 1rem !important;
 }
 .pt-4 {
-  padding-top: 1.5rem;
+  padding-top: 1.5rem !important;
 }
 .pt-5 {
-  padding-top: 3rem;
+  padding-top: 3rem !important;
+}
+
+.pb-0 {
+  padding-bottom: 0 !important;
+}
+.pb-1 {
+  padding-bottom: 0.25rem !important;
+}
+.pb-2 {
+  padding-bottom: 0.5rem !important;
+}
+.pb-3 {
+  padding-bottom: 1rem !important;
+}
+.pb-4 {
+  padding-bottom: 1.5rem !important;
+}
+.pb-5 {
+  padding-bottom: 3rem !important;
 }
 
 //margin
@@ -82,38 +104,38 @@ body {
   margin: 0 !important;
 }
 .m-1 {
-  margin: 0.25rem;
+  margin: 0.25rem !important;
 }
 .m-2 {
-  margin: 0.5rem;
+  margin: 0.5rem !important;
 }
 .m-3 {
-  margin: 1rem;
+  margin: 1rem !important;
 }
 .m-4 {
-  margin: 1.5rem;
+  margin: 1.5rem !important;
 }
 .m-5 {
-  margin: 3rem;
+  margin: 3rem !important;
 }
 
 .ml-0 {
   margin-left: 0 !important;
 }
 .ml-1 {
-  margin-left: 0.25rem;
+  margin-left: 0.25rem !important;
 }
 .ml-2 {
-  margin-left: 0.5rem;
+  margin-left: 0.5rem !important;
 }
 .ml-3 {
-  margin-left: 1rem;
+  margin-left: 1rem !important;
 }
 .ml-4 {
-  margin-left: 1.5rem;
+  margin-left: 1.5rem !important;
 }
 .ml-5 {
-  margin-left: 3rem;
+  margin-left: 3rem !important;
 }
 
 .mr-auto {
@@ -123,38 +145,38 @@ body {
   margin-right: 0 !important;
 }
 .mr-1 {
-  margin-right: 0.25rem;
+  margin-right: 0.25rem !important;
 }
 .mr-2 {
-  margin-right: 0.5rem;
+  margin-right: 0.5rem !important;
 }
 .mr-3 {
-  margin-right: 1rem;
+  margin-right: 1rem !important;
 }
 .mr-4 {
-  margin-right: 1.5rem;
+  margin-right: 1.5rem !important;
 }
 .mr-5 {
-  margin-right: 3rem;
+  margin-right: 3rem !important;
 }
 
 .mb-0 {
   margin-bottom: 0 !important;
 }
 .mb-1 {
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.25rem !important;
 }
 .mb-2 {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem !important;
 }
 .mb-3 {
-  margin-bottom: 1rem;
+  margin-bottom: 1rem !important;
 }
 .mb-4 {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem !important;
 }
 .mb-5 {
-  margin-bottom: 3rem;
+  margin-bottom: 3rem !important;
 }
 
 .mt-auto {
@@ -181,6 +203,30 @@ body {
   width: auto;
   overflow-x: hidden;
   overflow-y: scroll;
+  .list-title-header {
+    font-size: var(--f10);
+    font-weight: 600;
+    color: var(--gray-button);
+  }
+  .list-item {
+    display: flex;
+    align-items: center;
+    // padding: ;
+    font-weight: 700;
+    border-bottom: 1px solid var(--border-gray);
+    .title {
+      font-size: var(--f12);
+        color: var(--black);
+        margin: 0;
+        margin-right: auto;
+        font-weight: inherit;
+    }
+    .value {
+      font-size: var(--f12);
+      color: var(--text-gray);
+      font-weight: inherit;
+    }
+  }
 }
 .first-button-container {
   height: 60px;
@@ -259,6 +305,40 @@ body {
     }
   }
 }
+.filter-div {
+  display: flex;
+  box-sizing: border-box;
+  padding: 16px 0;
+  margin: 0 16px;
+  border-bottom: 1px solid var(--border-gray);
+  p {
+    font-size: var(--f10);
+    margin: 0;
+    color: var(--gray-button);
+  }
+  
+  .amenity {
+    text-transform: capitalize;
+    width: auto;
+    // height: 26px;
+    background: var(--white);
+    border-radius: 16px;
+    text-align: center;
+    padding: 6px 16px;
+    color: var(--gray-button);
+    font-size: var(--f11);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    margin: 0 8px 8px 0;
+    &.active {
+      color: var(--white);
+      background: var(--gray-button);
+    }
+  }
+
+}
 //button style
 
 .white-btn {
@@ -267,8 +347,48 @@ body {
   font-weight: 500;
   color: var(--gray-button);
   text-align: center;
+  text-transform: capitalize;
   border-radius: 8px;
   border: none;
+}
+.remove-btn {
+  font-size: var(--f12);
+  text-align: center;
+  padding: 10px 16px;
+  background: var(--light-orange);
+  color: var(--full);
+  border-radius: 8px;
+  font-weight: 700;
+  border: none;
+}
+.light-btn {
+  font-size: var(--f12);
+  text-align: center;
+  padding: 10px 16px;
+  background: rgba(166, 176, 165, 0.2);
+  color: var(--gray-button);
+  border-radius: 8px;
+  font-weight: 700;
+  border: none;
+}
+.cancel-normal-btn {
+  font-size: var(--f12);
+  text-transform: capitalize;
+  font-weight: 700;
+  color: var(--gray-button);
+  text-align: left;
+  border: none;
+  background: transparent;
+}
+// text color css 
+.text-orange {
+  color: var(--full) !important;
+}
+.text-gray {
+  color: var(--text-gray) !important;
+}
+.text-dark-gray {
+  color: var(--gray-button) !important;
 }
 //icons styles
 .icon-10 {
